#0000 Service: Correction of the default datasource

--- a/test/snake.html
+++ b/test/snake.html
@@ -47,13 +47,13 @@
 
           SnakeService = {
 
-             DATASOURCE_URL: "https://seanox.com/xmex!",
+            //DATASOURCE_URL: "https://seanox.com/xmex!",
             //DATASOURCE_URL: "http://127.0.0.1/xmex!",
             //DATASOURCE_URL: "http://127.0.0.1:8080/xmex!",
             //DATASOURCE_URL: "http://192.168.10.10/xmex!",
             //DATASOURCE_URL: "http://192.168.10.10:8080/xmex!",
 
-             // DATASOURCE_URL: "http://127.0.0.1/xmex!",
+              DATASOURCE_URL: "http://127.0.0.1/xmex!",
               DATASOURCE_STORAGE : "Example_of_Snake snake",
               BOARD_ROWS: 31,
               BOARD_COLS: 41,
